erDiagram
    Assembly |o--|| Strain : "assembly_strain"
    Bin ||--|| Assembly : "bin_assembly"
    Community |o--|| Condition : "community_condition"
    Community |o--|| Sample : "community_sample"
    Community |o--|| Strain : "community_defined_strains"
    DubSeq_Library ||--|| Genome : "dubseq_library_genome"
    Gene ||--|| Genome : "gene_genome"
    Genome |o--|| Strain : "genome_strain"
    Process |o--|| Protocol : "process_protocol"
    Sample ||--|| Location : "sample_location"
    Strain |o--|| Genome : "strain_genome"
    TnSeq_Library ||--|| Genome : "tnseq_library_genome"
    Strain |o--o{ Gene : "strain_genes_changed"
    Community |o--o{ Community : "community_parent_community"
    Strain |o--o{ Strain : "strain_derived_from"
